--- a/src/app/components/calendar-settings/calendar-settings.html
+++ b/src/app/components/calendar-settings/calendar-settings.html
@@ -81,7 +81,10 @@
     </div> -->
 
     <!-- Block -->
-    <div *ngIf="showBlockOptions" style="border-top: 1px solid #f0f0f0; padding-top: 20px;">
+    <div
+      *ngIf="showBlockOptions"
+      style="border-top: 1px solid #f0f0f0; padding-top: 20px"
+    >
       <div class="selected-dates-info mb-3">
         <h4>Selected Dates Options</h4>
       </div>
@@ -128,7 +131,7 @@
         </button>
       </div>
     </div>
-    <div class="help-section ">
+    <div class="help-section">
       <div class="help-card">
         <h6>💡 Tips:</h6>
         <ul class="help-list">
