--- a/src/app/components/host-wallet/host-wallet.css
+++ b/src/app/components/host-wallet/host-wallet.css
@@ -123,7 +123,8 @@
   padding: 10px 20px;
   border-radius: 30px;
   /*cursor: pointer;
-  */font-size: 14px;
+  */
+  font-size: 14px;
   font-weight: 500;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
@@ -287,7 +288,7 @@
   border-radius: 12px;
   padding: 25px;
   background-color: #f8f9fa;
-  border:1px solid #eee;
+  border: 1px solid #eee;
 
   /* box-shadow: 0 2px 8px rgba(0,0,0,0.1); */
 }
