--- a/src/app/components/mainswiper/mainswiper.css
+++ b/src/app/components/mainswiper/mainswiper.css
@@ -1,7 +1,7 @@
 .properties-container {
   margin: 0 auto;
   padding: 0 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   overflow: hidden;
 }
 
@@ -50,14 +50,14 @@
 
 swiper-container {
   /* background-color: red; */
-  padding: 0rem 0 1rem 0!important;
+  padding: 0rem 0 1rem 0 !important;
   width: 100%;
   overflow: hidden;
 }
 
 swiper-slide {
   /* background-color: green; */
-  margin-bottom: 0.5rem ;
+  margin-bottom: 0.5rem;
   /* width: 240px !important; */
   height: auto;
 }
